# suno-client-projectm-video-creator_kimi-k_2.6_via-nvidia-nim

./: .gitignore  AGENTS.md  AGENTS.working-copy.md  CMakeLists.txt  README.md
.agent_work/: AGENTS.md
.agents_work/: SKILLS.md
.agents_work/plans/: INITIAL_PROMPT.md  Phase_1.md  Phase_2.md  Phase_3.md  Phase_4.md  Phase_5.md  Phase_6.md  insights_to_copy_SO-SO-SO-COOL.md
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/: package.json  pnpm-lock.yaml  vercel.json
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/scripts/: copy_locked_file.py  download-lyrics.mjs  extract_edge_auth.mjs  extract_edge_auth.py  iteotwawki-poll-result.json  iteotwawki-submit-result.json  submit-iteotwawki.mjs  submit-iteotwawki.ps1  test-iteotwawki.json
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/src/app/: page.tsx
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/src/app/api/custom_generate/: route.ts
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/src/app/api/funnel/generate/: route.ts
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/src/app/api/funnel/prompt/: route.ts
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/src/app/components/: Footer.tsx  Header.tsx  SunoFunnel.tsx
.agents_work/third_party_code/suno-api_github-repo_interesting-forks/suno-api-5.5-main/suno-api-5.5-main/src/lib/: SunoApi.ts  sunoFunnel.ts
apps/: main.cpp
docs/: BUILDING.md  INITIAL_PROMPT_PROJECT_OVERVIEW.md
qml/: Theme.qml  main.qml
qml/views/: DashboardView.qml  LibraryView.qml  SettingsView.qml  SunoView.qml  TimelineView.qml  VisualizerView.qml
